# MyTelegramUtility

./: .gitignore
TelegramUtility/: CMakeLists.txt  abstracttask.cpp  abstracttask.h  closeapplicationtask.cpp  closeapplicationtask.h  findchatidtask.cpp  findchatidtask.h  finduseridinchattask.cpp  finduseridinchattask.h  finduseridtask.cpp  finduseridtask.h  logintask.cpp  logintask.h  logouttask.cpp  logouttask.h  main.cpp  personaldata.h  telegramclient.cpp  telegramclient.cpp.bak  telegramclient.h
